erDiagram
    conversations {
        TEXT id PK
        TEXT user_id
        TEXT session_id
        TIMESTAMPTZ created_at
    }

    messages {
        TEXT id PK
        TEXT conversation_id FK
        TEXT role
        TEXT content
        TEXT content_type
        TEXT agent
        TIMESTAMPTZ created_at
    }

    images {
        TEXT id PK
        TEXT conversation_id FK
        TEXT message_id FK
        TEXT filename
        TEXT mime_type
        BYTEA data
        TIMESTAMPTZ created_at
    }

    subjects {
        BIGSERIAL subject_id PK
        TEXT name UK
    }

    chapters {
        BIGSERIAL chapter_id PK
        BIGINT subject_id FK
        TEXT name
        TEXT exam_target
        INT sort_order
    }

    topics {
        BIGSERIAL topic_id PK
        BIGINT chapter_id FK
        TEXT name
        TEXT exam_target
    }

    interactions {
        TEXT id PK
        TEXT conversation_id FK
        TEXT question_text
        TEXT image_id
        BIGINT subject_id FK
        INT difficulty
        TEXT problem_text
        TEXT state
        INT hint_level
        TEXT exit_reason
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    interaction_topics {
        TEXT interaction_id PK_FK
        BIGINT topic_id PK_FK
        REAL confidence
    }

    student_profiles {
        TEXT user_id PK
        TEXT display_name
        TEXT exam_target
        INT total_questions
        INT total_self_solved
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }

    student_attempts {
        BIGSERIAL attempt_id PK
        TEXT interaction_id FK
        TEXT user_id FK
        INT hint_level
        REAL score
        BOOLEAN correct
        TEXT student_message
        JSONB evaluator_json
        TIMESTAMPTZ created_at
    }

    student_topic_mastery {
        TEXT user_id PK_FK
        BIGINT topic_id PK_FK
        REAL mastery_score
        INT total_attempts
        INT correct_attempts
        REAL avg_score
        REAL avg_hints_used
        INT solutions_viewed
        TIMESTAMPTZ last_attempt_at
        TIMESTAMPTZ updated_at
    }

    conversations ||--o{ messages : "has"
    conversations ||--o{ images : "has"
    conversations ||--o{ interactions : "has"
    messages ||--o{ images : "attached to"

    subjects ||--o{ chapters : "contains"
    chapters ||--o{ topics : "contains"

    subjects ||--o{ interactions : "subject_id"

    interactions ||--o{ interaction_topics : "has"
    topics ||--o{ interaction_topics : "referenced by"

    interactions ||--o{ student_attempts : "has"
    student_profiles ||--o{ student_attempts : "made by"

    student_profiles ||--o{ student_topic_mastery : "has"
    topics ||--o{ student_topic_mastery : "tracked by"
